--- a/manifest.json
+++ b/manifest.json
@@ -18,6 +18,12 @@
   "background": {
     "service_worker": "background/background.js"
   },
+  "content_scripts": [
+    {
+      "matches": ["https://app.artistly.ai/*"],
+      "js": ["content/content.js"]
+    }
+  ],
   "action": {
     "default_title": "Open Automation Toolbox"
   },
